# Legion

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_MODEL_SUMMARY.md  Add function framework.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SKILL.md  STRUCTURE.md  deploy_all.sh  deploy_core_claw.sh  docker_build.py  nexus_legion_agent.prompt  nexus_legion_x_omega.txt  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_nexus_ai.py  run_tests.sh  setup.py  system_info.ps1  system_prompt.txt  test_complete_system.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
agents/: advanced_reasoning.py  agent_manager.py  ai_core.py  distributed_agents.py  llm_integration.py  multi_modal_ai.py  nexus_ai_model.py  orchestrator.py  tasks.py
api/: nexus_api.py
bot/: config.py  sandbox.py  voice.py
deploy/: deploy_all.ps1  deploy_all.sh
docs/: AI_QUICK_REFERENCE.md  NEXUS_AI_MODEL.md  PROTOCOL_SANITIZED.md  USAGE_README.md  WSL_SETUP.md  architecture.md  contributing.md  deployment_guide.md  function_reference.md  function_reference_full.md  prompt_safeguard.md  telegram_integration.md
examples/: ai_integration_examples.py  orchestration_example.json
extracted/: clean_transcript.txt  orchestration_manifest.json  tech_stack.json
knowledge_base/: ai_memory.json
legion_core_claw/: __init__.py  main.py
orchestration/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  README.md  unimind_lvx_wrapper.sh
plugins/: __init__.py  plugin_loader.py
registry/: tool_registry.json
runtime/: Dockerfile  requirements.txt
schemas/: functions.json  functions_chunk_1.json  functions_chunk_10.json  functions_chunk_11.json  functions_chunk_12.json  functions_chunk_13.json  functions_chunk_14.json  functions_chunk_15.json  functions_chunk_16.json  functions_chunk_17.json  functions_chunk_18.json  functions_chunk_2.json  functions_chunk_3.json  functions_chunk_4.json  functions_chunk_5.json  functions_chunk_6.json  functions_chunk_7.json  functions_chunk_8.json  functions_chunk_9.json  (+2 more)
src/: main.py
(+76 files in other folders)
